@@ -1,5 +1,7 @@
 <?php
 
+include_once('modules/Food_Service/includes/FS_Icons.inc.php');
+
 DrawHeader(ProgramTitle());
 
 $menus_RET = DBGet(DBQuery("SELECT MENU_ID,TITLE FROM FOOD_SERVICE_MENUS WHERE SCHOOL_ID='".UserSchool()."' ORDER BY SORT_ORDER"),array(),array('MENU_ID'));
@@ -73,7 +75,7 @@ if(count($items_RET))
 			echo '<TR>';
 			$i = $per_row;
 		}
-		echo '<TD style="border: 1px solid"><IMG src="'.$FS_IconsPath.$item['ICON'].'" width="128" /></TD>';
+		echo '<TD style="border: 1px solid">'.makeIcon($item['ICON'],'','128').'</TD>';
 		$i--;
 		if(!$i)
 			echo '</TR>';
